--- a/index.ipynb
+++ b/index.ipynb
@@ -59,7 +59,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pf\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
     "\n",
     "\n",
     "np.random.seed(12) # do not change this seed."
