--- a/index.ipynb
+++ b/index.ipynb
@@ -79,7 +79,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here\n"
+    "# your code here\n",
+    "pandas.da"
    ]
   },
   {
