--- a/index.ipynb
+++ b/index.ipynb
@@ -80,7 +80,7 @@
    "outputs": [],
    "source": [
     "# your code here\n",
-    "pandas.date_range()"
+    "pandas.date_range('')"
    ]
   },
   {
