--- a/index.ipynb
+++ b/index.ipynb
@@ -80,7 +80,7 @@
    "outputs": [],
    "source": [
     "# your code here\n",
-    "pandas.date_range('')"
+    "pd.date_range(start='1/1/2018', end='1/08/2018')"
    ]
   },
   {
