--- a/index.ipynb
+++ b/index.ipynb
@@ -75,9 +75,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DatetimeIndex(['2018-01-01', '2018-01-02', '2018-01-03', '2018-01-04',\n",
+       "               '2018-01-05', '2018-01-06', '2018-01-07', '2018-01-08'],\n",
+       "              dtype='datetime64[ns]', freq='D')"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# your code here\n",
     "pd.date_range(start='1/1/2018', end='1/08/2018')"
