--- a/index.ipynb
+++ b/index.ipynb
@@ -75,26 +75,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "DatetimeIndex(['2018-01-01', '2018-01-02', '2018-01-03', '2018-01-04',\n",
-       "               '2018-01-05', '2018-01-06', '2018-01-07', '2018-01-08',\n",
-       "               '2018-01-09', '2018-01-10', '2018-01-11', '2018-01-12'],\n",
-       "              dtype='datetime64[ns]', freq='D')"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# your code here\n",
-    "pd.date_range(start='1/1/2018', end='1/12/2018')"
+    "dates = pd.date_range(start='1/1/2018', end='1/12/2018')"
    ]
   },
   {
@@ -110,7 +96,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here"
+    "# your code here\n"
    ]
   },
   {
