--- a/index.ipynb
+++ b/index.ipynb
@@ -84,6 +84,26 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "12"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(dates)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
