Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -75,26 +75,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "# your code here\n",
-    "dates = pd.date_range(start='8/1/2018', end='10/31/2018')"
+    "dates = pd.date_range(start='8/1/2018', end='10/30/2018')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "92"
+       "91"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -116,7 +116,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here\n"
+    "# your code here\n",
+    "commute = "
    ]
   },
   {
