--- a/index.ipynb
+++ b/index.ipynb
@@ -112,12 +112,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "# your code here\n",
-    "commute = "
+    "commute = np.random.seed(len(dates))"
    ]
   },
   {
