Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -112,12 +112,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-17-f4fb0dad9e46>, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-17-f4fb0dad9e46>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    commute = np.random.normal(25,4len(dates))\u001b[0m\n\u001b[0m                                     ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "# your code here\n",
-    "commute = np.random.seed(len(dates))"
+    "commute = np.random.normal(25,4len(dates))"
    ]
   },
   {
