--- a/index.ipynb
+++ b/index.ipynb
@@ -150,7 +150,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "ax = "
    ]
   },
   {
