--- a/index.ipynb
+++ b/index.ipynb
@@ -151,7 +151,7 @@
    "outputs": [],
    "source": [
     "# your code here\n",
-    "ax = commute_series.p"
+    "ax = commute_series.plot(figsize = )"
    ]
   },
   {
