Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -151,7 +151,7 @@
    "outputs": [],
    "source": [
     "# your code here\n",
-    "ax = commute_series.plot(figsize = 15,10)\n"
+    "ax = commute_series.plot(figsize = (15,10))\n"
    ]
   },
   {
