Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -61,6 +61,7 @@
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
+    "import matplotlib.pylab as polt\n",
     "\n",
     "\n",
     "np.random.seed(12) # do not change this seed."
