--- a/index.ipynb
+++ b/index.ipynb
@@ -61,7 +61,8 @@
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import matplotlib.pylab as polt\n",
+    "import matplotlib.pylab as plt\n",
+    "%matplotlibin\n",
     "\n",
     "\n",
     "np.random.seed(12) # do not change this seed."
