Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -55,14 +55,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "UsageError: Line magic function `%matplotlibinline` not found.\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pylab as plt\n",
-    "%matplotlibin\n",
+    "%matplotlibinline\n",
     "\n",
     "\n",
     "np.random.seed(12) # do not change this seed."
