Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -55,22 +55,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "UsageError: Line magic function `%matplotlibinline` not found.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import matplotlib.pylab as plt\n",
-    "%matplotlibinline\n",
+    "import matplotlib.pyplot as plt\n",
+    "# %matplotlibinline\n",
     "\n",
     "\n",
     "np.random.seed(12) # do not change this seed."
