--- a/index.ipynb
+++ b/index.ipynb
@@ -167,6 +167,7 @@
    "source": [
     "# your code here\n",
     "ax = commute_series.plot(figsize = (15,10))\n",
+    "plt.xlabel('')\n",
     "plt.show()"
    ]
   },
