--- a/index.ipynb
+++ b/index.ipynb
@@ -167,7 +167,7 @@
    "source": [
     "# your code here\n",
     "ax = commute_series.plot(figsize = (15,10))\n",
-    "ax.set_ylabel('')\n",
+    "ax.set_ylabel('commute time')\n",
     "plt.show()"
    ]
   },
