Automatically backed up by Learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -168,7 +168,7 @@
     "# your code here\n",
     "ax = commute_series.plot(figsize = (15,10))\n",
     "ax.set_ylabel('commute_time', fontsize = 14)\n",
-    "ax.set_xlabel('dates', fonts)\n",
+    "ax.set_xlabel()\n",
     "plt.show()"
    ]
   },
