Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -186,7 +186,8 @@
    "outputs": [],
    "source": [
     "# your code here\n",
-    "# shortest commute time\n"
+    "# shortest commute time\n",
+    "min(commute)"
    ]
   },
   {
