--- a/index.ipynb
+++ b/index.ipynb
@@ -181,9 +181,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "15.745801053300271"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# your code here\n",
     "# shortest commute time\n",
@@ -196,7 +207,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "# longest"
    ]
   },
   {
