--- a/index.ipynb
+++ b/index.ipynb
@@ -236,10 +236,21 @@
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7f64a521a748>"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# your code here\n",
-    "commute_series"
+    "commute_series.hist(grid=False)"
    ]
   },
   {
