Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -375,14 +375,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<function pandas.core.indexes.datetimes.date_range(start=None, end=None, periods=None, freq=None, tz=None, normalize=False, name=None, closed=None, **kwargs)>"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# keep the random seed\n",
     "np.random.seed(11)\n",
     "\n",
-    "# create a series with the specified dates"
+    "# create a series with the specified dates\n",
+    "pd.date_range(start = '')"
    ]
   },
   {
