Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -375,26 +375,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<function pandas.core.indexes.datetimes.date_range(start=None, end=None, periods=None, freq=None, tz=None, normalize=False, name=None, closed=None, **kwargs)>"
-      ]
-     },
-     "execution_count": 34,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# keep the random seed\n",
     "np.random.seed(11)\n",
     "\n",
     "# create a series with the specified dates\n",
-    "pd.date_range(start = '1/1/2018', end = '12/31/2018')"
+    "r_dates = pd.date_range(start = '1/1/2018', end = '12/31/2018')"
    ]
   },
   {
@@ -410,7 +399,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "r_dates.plt(fig)"
    ]
   },
   {
