Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -375,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -383,7 +383,8 @@
     "np.random.seed(11)\n",
     "\n",
     "# create a series with the specified dates\n",
-    "r_dates = pd.date_range(start = '1/1/2018', end = '12/31/2018')"
+    "r_dates = pd.date_range(start = '1/1/2018', end = '12/31/2018')\n",
+    "error = np.random.normal(0,10,len(dates))"
    ]
   },
   {
@@ -408,8 +409,7 @@
     }
    ],
    "source": [
-    "# your code here\n",
-    "r_dates.plt(figsize= 15,10)"
+    "# your code here\n"
    ]
   },
   {
