Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -396,7 +396,7 @@
     "def random_walk(start, end):\n",
     "    Y_0= start\n",
     "    cum_err = np.cumsum(error)\n",
-    "    "
+    "    Y = cum_err"
    ]
   },
   {
