Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -389,14 +389,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
     "def random_walk(start, end):\n",
     "    Y_0= start\n",
     "    cum_err = np.cumsum(error)\n",
-    "    Y = cum_err"
+    "    Y = cum_err + Y_0\n",
+    "    return Y"
    ]
   },
   {
