Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -401,6 +401,17 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "shares_value = random_walk(1000, error)\n",
+    "\n",
+    "shares_series =  pd.Series(shares_value, index=rdates)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
